--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>ChessGame.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="UIModes.cs" />
     <Compile Include="WinHelper.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
